--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@
     padding-left: 10px;
     font-weight: 700;
     font-size: 18px;
+    text-size-adjust: auto;
+    
 }
 
 .button-add-task {
@@ -64,6 +66,7 @@
     cursor: pointer;
 }
 
+
 img {
     height: 25px;
     opacity: 0;
@@ -72,4 +75,9 @@ img {
 .task:hover img {
     opacity: 1;
     transition: opacity 0.5s ease-in-out;
+}
+
+.done {
+    background-color: #8fac55;
+    text-decoration: line-through;
 }
